<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wavemap_ros</name>
  <version>0.0.0</version>
  <description>ROS interface for wavemap.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <build_depend>voliro_build</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>wavemap</depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>minkindr_conversions</depend>
  <depend>minkindr</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>wavemap_msgs</depend>
  <depend>wavemap_ros_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
